--- a/page.html
+++ b/page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page bleue</title>
+    <title>Page jaune</title>
   </head>
-  <body style ="background-color:#1abc9c;">
+  <body style ="background-color:#F3FF33;">
   Cette page est bleue!
   </body>
 </html>
