quatrieme version : red

--- a/page.html
+++ b/page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page bleue</title>
+    <title>Page rouge</title>
   </head>
-  <body style ="background-color:#1abc9c;">
-  Cette page est bleue!
+  <body style ="background-color:#FF0000;">
+  Cette page est rouge!
   </body>
 </html>
